Changelog
=========

2.8.6 (unreleased)
------------------

- Add option to limit items logged in diff, switch default to only diff 5 items. [deiferni]
- Add helper for creating Solr filters from catalog queries.
  [buchi]


2.8.5 (2020-05-06)
------------------

- Make sure maintenance scripts are run as system user. [njohner]


2.8.4 (2020-04-02)
------------------

- Fix update of the modified index. [njohner]


2.8.3 (2020-04-02)
------------------

- Update the modified index to match new rounding of DateTime. [njohner]


2.8.2 (2020-03-27)
------------------

- Fix to_iso8601 prevent rounding errors with DateTime milliseconds above 999500. [deiferni]
- Fix blob extraction for DX items. [mbaechtold]


2.8.1 (2020-02-05)
------------------

- Fix to_iso8601 for years before 1900.
  [deiferni]


2.8.0 (2019-12-06)
------------------

- Add support for uploading blobs to extract handler.
  [lgraf]

- Add support for Plone 5.0 and 5.1.
  [buchi]


2.7.0 (2019-09-16)
------------------

- Add console script for maintenance tasks.
  [buchi]

- Add registry setting for enabling/disabling indexing.
  [buchi]


2.6.2 (2019-09-12)
------------------

- Avoid sending atomic update commands with null-documents. [lgraf]


2.6.1 (2019-08-26)
------------------

- Fix 'path_depth' indexing handling, when 'path_depth' is not part of the schema. [phgross]


2.6.0 (2019-08-19)
------------------

- Use Solr Cell only for text extraction. The SearchableText is now also indexed
  using the update handler which allows atomic updates. Also fixes #137.
  [buchi]

- Fix error when trying to delete an object without a unique key. [jone]


2.5.0 (2019-07-02)
------------------

- Make sure to always update 'path_depth' if 'path' is (re)indexed.
  [lgraf]

- Handle facet_counts in solr response.
  [njohner]


2.4.0 (2019-06-13)
------------------

- Perform soft commits and wait for new searcher by default to allow near real
  time (NRT) searching.
  [buchi]
